# Backend_FastAPI

./: .env.example  .gitignore  AGENTS.md  GCS_implementation.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  SPEECH_AUTO_SUBMIT.md  STT Dual Mode Implementation Plan.md  WHEN_YOU _GET_HOME.txt  authorize_google.py  example_tool_schema.json  implementation_plan.md  inspect_monarch.py  logging_config.json  logging_settings.conf  ngrok_tunnel.py  package-lock.json  pyproject.toml  reproduce_issue.py  setup_ngrok.py  start.sh  start_dev.sh  start_server.sh  startdev.sh  test_calendar.py  test_cloudflare.py  test_deepgram.py  test_image_search.py  test_print.py  test_reasoning_exclusion.html  update_remote.md  verification_result.txt
.github/: copilot-instructions.md
Test_Frontend/: index.html  main.js  markdown.js  model-settings.js  package-lock.json  package.json  settings.html  settings.js  slider-fields.js  speech-settings.js  styles.css  test_clear_functionality.html
certs/: server.crt  server.key
data/: chat_sessions.db  chat_sessions.db-shm  chat_sessions.db-wal  client_tool_preferences.json  kiosk_mcp_servers.json  kiosk_model_settings.json  kiosk_stt_settings.json  mcp_ports.conf  mcp_servers.json  mcp_servers.json.backup  mcp_servers.json.bak  model_settings.json  presets.json  suggestions.json
docs/: AI_CONVERSATION_TITLES.md  AI_PLAYBOOK.md  ALARM_MEMORY_CONSTRAINTS.md  CONVERSATION_SEARCH.md  DEVELOPMENT_ENVIRONMENT.md  ECHO_DEVICE_SETUP.md  ECHO_KIOSK_SETUP.md  ECHO_MEMORY_NEXT_STEPS.md  GMAIL_ATTACHMENTS.md  HOW_MCP_TOOLS_WORK.md  (+16 more)
(+665 files in other folders)
