[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.2",
    "aiosqlite>=0.20.0",
    "mcp>=1.17.0",
    "pydantic-settings>=2.4.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.2",
    "sse-starlette>=2.1.0",
    "uvicorn>=0.30.0",
    "websockets>=11.0",
    "pyngrok>=7.4.0",
    "python-dateutil>=2.8.2",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "kreuzberg>=3.20.2",
    "google-cloud-storage>=2.18.0",
]

[project.scripts]
backend = "backend.main:main"
